# priobike-news-service

./: .gitignore  Dockerfile  Jenkinsfile  README.md  dev.env  docker-compose.test.yml  docker-compose.yml  pyproject.toml  run-dev.sh  run-server.sh
.github/workflows/: publish.yaml  test.yaml
backend/backend/: settings.py  urls.py
backend/news/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
backend/news/migrations/: 0001_initial.py  0002_alter_newsarticle_md5.py
backend/news/tests/: test_article.py  test_category.py
backend/sync/: urls.py  views.py
backend/sync/management/commands/: sync.py
config/: fcm-key.json
nginx_inner/conf.d/: default.conf
nginx_outer/conf.d/: default.conf
priobike_news_service/: manage.py
priobike_news_service/news_service_app/: apps.py  models.py  tests.py  urls.py  views.py
priobike_news_service/news_service_app/migrations/: 0001_initial.py  0002_alter_newsarticle_pub_date.py  0003_alter_newsarticle_pub_date.py  0004_alter_newsarticle_pub_date.py  0005_alter_newsarticle_article_title.py
priobike_news_service/news_service_app/tests/: test_article.py  test_category.py
priobike_news_service/news_service_app/utils/: serializer.py
priobike_news_service/priobike_news_service/: asgi.py  settings.py  urls.py  wsgi.py
