[tool.poetry]
name = "priobike-news-service"
version = "0.1.0"
description = "A microservice to create and publish news to the PrioBike app."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.9"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"
firebase-admin = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
